--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h1{
     background-color: var(--primario);
     padding: 1rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 2rem;
 }
@@ -81,3 +82,74 @@ h1{
     font-size: 2rem;
 }
 
+.nevegacion_cont:hover{
+    color: var(--secundarioOsc);
+    background-color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+    .navegacion {
+        flex-direction: row;
+        justify-content: space-between;
+        
+    }
+}
+* {box-sizing:border-box}
+
+.contenedor_hero {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.micarrusel  {
+  display: none;
+}
+
+.antes, .despues {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.despues {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.antes:hover, .despues:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+
+.active {
+  background-color: #717171;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  width:100%;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
