--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --primario: #858BF5;
-    --primarioOsc: #2b35fe;
+    --primarioOsc: #141758;
     --secundario: #BA7BFA;
     --secundarioOsc: #7f00fe;
     --blanco: #fff;
@@ -37,11 +37,24 @@ p{
 
 h1, h2, h3 {
     font-family: var(--fuentePrin);
-    color: var(--primario);
+    color: var(--negro);
     text-align: center;
 }
 h1{
     font-size: 4rem;
+
+}
+.contenedor{
+    max-width: 120rem;
+    margin: 1rem auto;
+    position: relative;
+}
+
+.sombra{
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    background-color: var(--primario);
+    padding: 4rem;
+    border-radius: 1rem;
 }
 
 .header{
@@ -152,4 +165,14 @@ h1{
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+.img_main{
+    height: 15rem;
+    border-radius: 50%;
+}
+.sobreMi p{
+    display: flex;
+    height: 2rem;
+    width: 6rem;
 }
