--- a/style.css
+++ b/style.css
@@ -176,3 +176,25 @@ h1{
     height: 2rem;
     width: 6rem;
 }
+
+@media(min-width: 760px){
+    .programas{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.programa{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.programa h2{
+    color: var(--negro);
+    font-weight: normal;
+}
+.programa p{
+    line-height: 2;
+    text-align: center;
+}
