--- a/style.css
+++ b/style.css
@@ -216,3 +216,61 @@ h1{
 .skill_completo{
     background-color: green;
 }
+
+.formulario{
+    background-color: #757575;
+    width: min( 60rem, 100% );
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+
+    
+}
+.formulario legend{
+   text-align: center;
+   font-size: 1.8rem;
+    text-transform: uppercase;
+    font-size: 700;
+    margin-bottom: 2rem;
+    color: var(--primario)
+}
+.formulario fieldset{
+    border: none;
+}
+
+
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+}
+
+
+.campo{
+    margin-bottom: 1rem;
+}
+
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.input-txt{
+    width: 100%;
+    border:none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.campo textarea{
+    height: 20rem;
+}
